--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,8 +12,8 @@
   <div class="container">
     <h1>Food Donation Application</h1>
     <p>Everyday, families across America are starving. You can help by donating your left over food.</p>
-    <a type="button" class="btn btn-lg btn-default" href="localhost:5000/login.html"><span class="glyphicon glyphicon-flash"></span>Login</a>
-    <a type="button" class="btn btn-lg btn-primary" href="localhost:5000/register.html"><span class="glyphicon glyphicon-download"></span>Register</a>
+    <a type="button" class="btn btn-lg btn-default" href="/login.html"><span class="glyphicon glyphicon-flash"></span>Login</a>
+    <a type="button" class="btn btn-lg btn-primary" href="/register.html"><span class="glyphicon glyphicon-download"></span>Register</a>
   </div>
 </div>
 </body>
